tests/rosetta/out/Java/99-bottles-of-beer-2.error
javac error: exit status 1
/tmp/TestMochiToJava99-bottles-of-beer-22055195615/001/99BottlesOfBeer2.java:5: error: <identifier> expected
public class 99BottlesOfBeer2 {
            ^
1 error
